migration code derived ecard -> start id